buildpacks/nodejs-engine/src/snapshots/errors___dist_layer_download_read_error.snap
---
source: buildpacks/nodejs-engine/src/errors.rs
---
- Debug Info:
  - Request to https://nodejs.org/download/release/v23.6.0/node-v23.6.0-linux-arm64.tar.gz failed
    Error: error sending request for url (https://test/error)

! Failed to download Node.js distribution
!
! A request to download the target Node.js distribution from https://nodejs.org/download/release/v23.6.0/node-v23.6.0-linux-arm64.tar.gz failed unexpectedly. This error can occur due to an unstable network connection or an issue with the upstream Node.js distribution server.
!
! Suggestions:
! - Check the status of https://status.nodejs.org/ for any reported issues.
! - Confirm the download url (https://nodejs.org/download/release/v23.6.0/node-v23.6.0-linux-arm64.tar.gz) works.
!
! Use the debug information above to troubleshoot and retry your build.
