buildpacks/nodejs-engine/src/snapshots/errors___dist_layer_download_write_error.snap
---
source: buildpacks/nodejs-engine/src/errors.rs
---
- Debug Info:
  - Could not write to file at /tmp/some-temp-file for download of https://nodejs.org/download/release/v23.6.0/node-v23.6.0-linux-arm64.tar.gz
    Error: Disk full

! Failed to write downloaded Node.js distribution
!
! An unexpected I/O error occurred while writing the Node.js distribution from https://nodejs.org/download/release/v23.6.0/node-v23.6.0-linux-arm64.tar.gz to disk at `/tmp/some-temp-file`.
!
! Use the debug information above to troubleshoot and retry your build.
!
! If the issue persists and you think you found a bug in the buildpack, reproduce the issue locally with a minimal example. Open an issue in the buildpack's GitHub repository and include the details here:
! https://github.com/heroku/buildpacks-nodejs/issues
