buildpacks/nodejs-engine/src/snapshots/errors___dist_layer_untar_error.snap
---
source: buildpacks/nodejs-engine/src/errors.rs
---
- Debug Info:
  - permission denied

! Failed to unpack Node.js distribution
!
! An unexpected I/O error occurred while trying to unpack from `/tmp/some-temp-file` to `/layers/buildpack/some-layer-dir`.
!
! Use the debug information above to troubleshoot and retry your build.
!
! If the issue persists and you think you found a bug in the buildpack, reproduce the issue locally with a minimal example. Open an issue in the buildpack's GitHub repository and include the details here:
! https://github.com/heroku/buildpacks-nodejs/issues
